# im-desktop

./: .clang-format-test  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE.md  NOTICE.md  README.CMAKE.txt  README.md  RELEASE_NOTES  config_linux.sh  del_moc.sh  icq.exports  linux_bootstrap.sh
core/: CMakeLists.txt  ReadMe.txt  async_task.cpp  async_task.h  core.cpp  core.h  core.vcxproj  core_settings.cpp  core_settings.h  crash_sender.cpp  crash_sender.h  curl_context.cpp  curl_context.h  curl_easy_handler.cpp  curl_easy_handler.h  curl_handler.cpp  curl_handler.h  curl_multi_handler.cpp  curl_multi_handler.h  debug_helper.natvis  gui_settings.cpp  gui_settings.h  http_request.cpp  http_request.h  main_thread.cpp  main_thread.h  namespaces.h  network_log.cpp  network_log.h  post_install_action.cpp  post_install_action.h  priority.h  product.h  proxy_settings.cpp  proxy_settings.h  scheduler.cpp  scheduler.h  search_pattern_history.cpp  search_pattern_history.h  statistics.cpp  (+7 more)
core/Voip/: VoipManager.cpp  VoipManager.h  VoipManagerDefines.h  VoipProtocol.cpp  VoipProtocol.h  VoipSerialization.h  call_busy.h  call_connected.h  call_dial.h  call_end.h  call_hold.h  call_incoming.h  call_start.h  voip_memory_reporter.cpp  voip_memory_reporter.h  window_settings.h
core/archive/: archive_index.cpp  archive_index.h  contact_archive.cpp  contact_archive.h  dlg_state.cpp  dlg_state.h  draft_storage.cpp  draft_storage.h  errors.h  gallery_cache.cpp  gallery_cache.h  history_message.cpp  history_message.h  history_patch.cpp  history_patch.h  local_history.cpp  local_history.h  mentions_me.cpp  mentions_me.h  message_flags.h  messages_data.cpp  messages_data.h  not_sent_messages.cpp  not_sent_messages.h  opened_dialog.cpp  opened_dialog.h  options.h  pending_drafts.cpp  pending_drafts.h  poll.cpp  poll.h  reactions.cpp  reactions.h  search_dialog_result.cpp  search_dialog_result.h  storage.cpp  storage.h  thread_parent_topic.cpp  thread_parent_topic.h  thread_update.cpp  (+3 more)
core/configuration/: app_config.cpp  app_config.h  external_config.cpp  external_config.h  host_config.cpp  host_config.h
core/connections/: accept_agreement_info.cpp  accept_agreement_info.h  base_im.cpp  base_im.h  contact_profile.cpp  contact_profile.h  im_container.cpp  im_container.h  im_login.cpp  im_login.h  login_info.cpp  login_info.h  send_feedback.cpp  send_feedback.h  urls_cache.cpp  urls_cache.h
core/core.xcodeproj/: project.pbxproj
core/curl_tools/: curl_ssl_callbacks.cpp  curl_ssl_callbacks.h  curl_ssl_callbacks_mac.h  curl_ssl_callbacks_mac.mm
core/disk_cache/: cache_entity.cpp  cache_entity.h  cache_entity_type.cpp  cache_entity_type.h  cache_filename.h  cache_garbage_collector.cpp  cache_garbage_collector.h  dir_cache.cpp  dir_cache.h  disk_cache.cpp  disk_cache.h
core/friendly/: friendly.cpp  friendly.h
core/log/: log.cpp  log.h
core/masks/: masks.cpp  masks.h
core/network/: network_change_notifier.cpp  network_change_notifier.h  network_change_observer.cpp  network_change_observer.h
core/profiling/: profiler.cpp  profiler.h
core/smartreply/: smartreply_marker.cpp  smartreply_marker.h  smartreply_suggest.cpp  smartreply_suggest.h  suggest_storage.cpp  suggest_storage.h
core/stickers/: stickers.cpp  stickers.h  suggests.cpp  suggests.h
core/subscriptions/: subscr_manager.cpp  subscr_manager.h  subscr_types.cpp  subscr_types.h  subscription.cpp  subscription.h
core/tasks/: task.cpp  task.h  task_storage.cpp  task_storage.h
core/themes/: theme_settings.cpp  theme_settings.h  wallpaper_loader.cpp  wallpaper_loader.h
core/tools/: binary_stream.cpp  binary_stream.h  binary_stream_reader.cpp  binary_stream_reader.h  coretime.cpp  coretime.h  device_id.cpp  device_id.h  event.cpp  event.h  exif.cpp  exif.h  fast_binary_stream.cpp  fast_binary_stream.h  features.cpp  features.h  file_sharing.cpp  file_sharing.h  hmac_sha_base64.cpp  hmac_sha_base64.h  json_helper.cpp  json_helper.h  md5.cpp  md5.h  scope.cpp  scope.h  semaphore.cpp  semaphore.h  settings.cpp  settings.h  spin_lock.h  string_comparator.h  strings.cpp  strings.h  system.h  system.mm  system_common.cpp  threadpool.cpp  threadpool.h  time_measure.h  (+4 more)
core/updater/: updater.cpp  updater.h
core/win32/: targetver.h
core/zstd_wrap/: zstd_context.cpp  zstd_context.h  zstd_wrap.cpp  zstd_wrap.h
corelib/: CMakeLists.txt  ReadMe.txt  collection.cpp  collection.h  collection_helper.cpp  collection_helper.h  core_face.h  core_instance.cpp  core_instance.h  corelib.cpp  corelib.def  corelib.h  corelib.rc  cp_afxres.h  enumerations.h  export_list  ibase.h  ifptr.h  iserializable.h  ivalue.h  namespaces.h  remote_proc.cpp  remote_proc.h  stdafx.cpp  stdafx.h
corelib/corelib/: corelib.pro
corelib/win32/: crash_sender.cpp  dllmain.cpp
coretest/: CMakeLists.txt  ReadMe.txt  coretest.cpp  stdafx.cpp  stdafx.h
gui/: .gitignore  CMakeLists.txt  QrcFunctions.cmake  Resource-agent.rc  Resource-biz.rc  Resource-dit.rc  Resource-icq.rc  app_config.cpp  app_config.h  compile.bat  core_dispatcher.cpp  core_dispatcher.h  cp_afxres.h  fonts.cpp  fonts.h  gui.pro  gui.vcxproj  gui.vcxproj.filters  gui_settings.cpp  gui_settings.h  main.cpp  my_info.cpp  my_info.h  namespaces.h  platform.cpp  platform.h  qt_prebuild.py  qt_prebuild_linux.py  qt_prebuild_mac.py  remote_proc.cpp  resource.h  resource.qrc  resource_emoji.qrc  stdafx.h  url_config.cpp  url_config.h
gui/accessibility/: AccessibilityFactory.cpp  AccessibilityFactory.h  LinkAccessibleWidget.cpp  LinkAccessibleWidget.h
gui/animation/: animation.cpp  animation.h
gui/cache/: ColoredCache.h  countries.cpp  countries.h
gui/controls/: AvatarPreview.cpp  AvatarPreview.h  BigEmojiWidget.h  (+115 more)
installer/: .gitignore  CMakeLists.txt  clean.bat  errors.h  installer.pro  installer.sln  installer.vcxproj  installer_agent.rc  installer_agent.sln  installer_biz.rc  installer_dit.rc  installer_icq.rc  installer_icq.sln  main.cpp  qt_prebuild.py  resource32.qrc  resource64.qrc  solution.h  stdafx.h
libomicron/: CMakeLists.txt  README.md
unittests/: CMakeLists.txt
(+1904 files in other folders)
